--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     height: 550px;
     color: white;
     font-weight: bold;
-    background: url("img/wheat-back.jpg");
+    background: url("img/wheat-back.jpg") no-repeat center;
     background-size: cover;
 }
 
@@ -32,6 +32,7 @@ body {
 .container {
     width: 800px;
     margin: 0 auto;
+    /* padding: 0 200px; */
 }
 
 .row {
@@ -122,7 +123,7 @@ body {
 }
 
 .item-column:first-child {
-    border-left: 1px solid rgba(0, 0, 0, 0.1)
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .item-conteiner {
