--- a/adaptation.css
+++ b/adaptation.css
@@ -1,5 +1,3 @@
-/* On screens that are 600px or less, set the background color to olive */
-
 @media screen and (max-width: 480px) {
     body {
         font-family: Arial, Helvetica, sans-serif;
@@ -9,18 +7,31 @@
     .container {
         width: inherit;
     }
+    .header {
+        width: auto;
+        padding: 0 30px;
+    }
     .logo-and-nav {
+        align-items: center;
         margin-top: 40px;
-        justify-content: space-between;
+    }
+    .logo-and-nav img {
+        width: 80px;
+        height: 46px;
     }
     .main-nav a {
-        padding: 21px 27px 18px 27px;
-        color: white;
-        line-height: 18px;
-        text-decoration: none;
-        display: block;
-        border-top: 1px solid rgba(255, 255, 255, 0.2);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        padding: 18px 8px;
+        font-size: 10px;
+        word-wrap: inherit;
+    }
+    .promo {
+        margin-top: 120px;
+        font-size: 50px;
+        line-height: 50px;
+    }
+    .bottles {
+        width: 100%;
+        padding: 80px 30px 110px;
     }
     .bottles .new-items {
         display: flex;
@@ -28,14 +39,19 @@
     }
     .bottles .item-column {
         margin-bottom: 20px;
+        padding-left: 15px;
+        padding-right: 0;
         border: none;
     }
     .bottles .item-column:first-child {
         padding-bottom: 35px;
         border-bottom: 1px solid #e5e5e5;
     }
+    .item-buttons {
+        line-height: 12px;
+    }
     .advantage {
-        padding-bottom: 40px;
+        padding: 40px 0;
     }
     .advantage .advantage-items {
         flex-direction: column;
@@ -43,7 +59,7 @@
         text-align: center;
     }
     .advantage .advantage-column {
-        padding: 90px 0 50px;
+        padding: 120px 0 40px;
         border: none;
     }
     .advantage .advantage-column:last-child {
@@ -56,7 +72,7 @@
     .advantage-brew,
     .advantage-matreshka,
     .advantage-thumbsup {
-        background-position: top 5px center;
+        background-position: top 38px center;
     }
     .kvast-reference {
         padding: 80px 30px;
@@ -81,7 +97,6 @@
         width: 100%;
     }
     .press-review .btn-cite {
-        align-items: center;
         justify-content: space-between;
     }
     .btn.read-more {
@@ -89,6 +104,74 @@
     }
     .press-review cite {
         margin-left: 0;
+        text-align: right;
+        font-size: 16px;
+    }
+    .range-table {
+        padding: 90px 30px;
+    }
+    .to-order {
+        padding: 80px 30px 108px;
+    }
+    .to-order .order-tip,
+    .to-order .order-form {
+        width: 100%;
+    }
+    .to-order .row input[type="text"] {
+        width: 100%;
         flex: 1;
+    }
+    .to-order .phone-row {
+        margin-right: 20px;
+    }
+    .order-form input[type="text"],
+    .order-form textarea {
+        height: 45px;
+        font-size: 14px;
+    }
+    .to-order .checkbox-area input~.check-icon {
+        width: 33px;
+        height: 33px;
+    }
+    .btn.submit {
+        cursor: pointer;
+        padding: 14px 19px;
+        color: white;
+        font-size: 14px;
+        outline: none;
+        background-color: #834700;
+        border: none;
+    }
+    .footer {
+        justify-content: flex-start;
+        padding: 60px 30px;
+    }
+    .footer .big-container {
+        width: 100%;
+    }
+    .footer .logo-and-nav img {
+        margin-left: 0;
+    }
+    .footer .main-nav {
+        margin-right: 0;
+    }
+    .footer-bottom {
+        margin-top: 30px;
+        flex-direction: column;
+    }
+    .footer-bottom,
+    .footer-bottom a {
+        font-size: 11px;
+    }
+    .footer-bottom .social-btn {
+        width: 45px;
+        height: 41px;
+    }
+    .footer-copyright {
+        margin: 11px 0 20px;
+        flex: none;
+    }
+    .footer-copyright p {
+        margin-left: 0;
     }
 }
