--- a/adaptation.css
+++ b/adaptation.css
@@ -5,10 +5,10 @@
         line-height: 22px;
     }
     .container {
-        width: inherit;
+        width: 100%;
     }
     .header {
-        width: auto;
+        width: 100%;
         padding: 0 30px;
     }
     .logo-and-nav {
@@ -36,6 +36,7 @@
     .bottles .new-items {
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
     .bottles .item-column {
         margin-bottom: 20px;
@@ -75,6 +76,7 @@
         background-position: top 38px center;
     }
     .kvast-reference {
+        width: 100%;
         padding: 80px 30px;
     }
     .kvast-reference .theory-container {
@@ -91,6 +93,7 @@
         margin-bottom: 15px;
     }
     .press-review {
+        width: 100%;
         padding: 80px 30px 90px;
     }
     .press-review p {
@@ -108,9 +111,11 @@
         font-size: 16px;
     }
     .range-table {
+        width: 100%;
         padding: 90px 30px;
     }
     .to-order {
+        width: 100%;
         padding: 80px 30px 108px;
     }
     .to-order .order-tip,
@@ -143,6 +148,7 @@
         border: none;
     }
     .footer {
+        width: 100%;
         justify-content: flex-start;
         padding: 60px 30px;
     }
