--- a/adaptation.css
+++ b/adaptation.css
@@ -1,183 +1,188 @@
 @media screen and (max-width: 480px) {
-    body {
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 12px;
-        line-height: 22px;
-    }
-    .container {
-        width: 100%;
-    }
-    .header {
-        width: 100%;
-        padding: 0 30px;
-    }
-    .logo-and-nav {
-        align-items: center;
-        margin-top: 40px;
-    }
-    .logo-and-nav img {
-        width: 80px;
-        height: 46px;
-    }
-    .main-nav a {
-        padding: 18px 8px;
-        font-size: 10px;
-        word-wrap: inherit;
-    }
-    .promo {
-        margin-top: 120px;
-        font-size: 50px;
-        line-height: 50px;
-    }
-    .bottles {
-        width: 100%;
-        padding: 80px 30px 110px;
-    }
-    .bottles .new-items {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .bottles .item-column {
-        margin-bottom: 20px;
-        padding-left: 15px;
-        padding-right: 0;
-        border: none;
-    }
-    .bottles .item-column:first-child {
-        padding-bottom: 35px;
-        border-bottom: 1px solid #e5e5e5;
-    }
-    .item-buttons {
-        line-height: 12px;
-    }
-    .advantage {
-        padding: 40px 0;
-    }
-    .advantage .advantage-items {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-    .advantage .advantage-column {
-        padding: 120px 0 40px;
-        border: none;
-    }
-    .advantage .advantage-column:last-child {
-        border: none;
-    }
-    .advantage .advantage-matreshka {
-        border-top: 1px solid #e5b66c;
-        border-bottom: 1px solid #e5b66c;
-    }
-    .advantage-brew,
-    .advantage-matreshka,
-    .advantage-thumbsup {
-        background-position: top 38px center;
-    }
-    .kvast-reference {
-        width: 100%;
-        padding: 80px 30px;
-    }
-    .kvast-reference .theory-container {
-        flex-direction: column;
-    }
-    .kvast-reference .column-2 {
-        margin-top: 21px;
-        margin-left: 0;
-    }
-    .reference-description {
-        width: 100%;
-    }
-    .reference-source {
-        margin-bottom: 15px;
-    }
-    .press-review {
-        width: 100%;
-        padding: 80px 30px 90px;
-    }
-    .press-review p {
-        width: 100%;
-    }
-    .press-review .btn-cite {
-        justify-content: space-between;
-    }
-    .btn.read-more {
-        padding: 11px 18px 12px;
-    }
-    .press-review cite {
-        margin-left: 0;
-        text-align: right;
-        font-size: 16px;
-    }
-    .range-table {
-        width: 100%;
-        padding: 90px 30px;
-    }
-    .to-order {
-        width: 100%;
-        padding: 80px 30px 108px;
-    }
-    .to-order .order-tip,
-    .to-order .order-form {
-        width: 100%;
-    }
-    .to-order .row input[type="text"] {
-        width: 100%;
-        flex: 1;
-    }
-    .to-order .phone-row {
-        margin-right: 20px;
-    }
-    .order-form input[type="text"],
-    .order-form textarea {
-        height: 45px;
-        font-size: 14px;
-    }
-    .to-order .checkbox-area input~.check-icon {
-        width: 33px;
-        height: 33px;
-    }
-    .btn.submit {
-        cursor: pointer;
-        padding: 14px 19px;
-        color: white;
-        font-size: 14px;
-        outline: none;
-        background-color: #834700;
-        border: none;
-    }
-    .footer {
-        width: 100%;
-        justify-content: flex-start;
-        padding: 60px 30px;
-    }
-    .footer .big-container {
-        width: 100%;
-    }
-    .footer .logo-and-nav img {
-        margin-left: 0;
-    }
-    .footer .main-nav {
-        margin-right: 0;
-    }
-    .footer-bottom {
-        margin-top: 30px;
-        flex-direction: column;
-    }
-    .footer-bottom,
-    .footer-bottom a {
-        font-size: 11px;
-    }
-    .footer-bottom .social-btn {
-        width: 45px;
-        height: 41px;
-    }
-    .footer-copyright {
-        margin: 11px 0 20px;
-        flex: none;
-    }
-    .footer-copyright p {
-        margin-left: 0;
-    }
+  header,
+  section,
+  footer {
+    box-sizing: border-box;
+  }
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    line-height: 22px;
+  }
+  .container {
+    width: 100%;
+  }
+  .header {
+    width: 100%;
+    padding: 0 30px;
+  }
+  .logo-and-nav {
+    align-items: center;
+    margin-top: 40px;
+  }
+  .logo-and-nav img {
+    width: 80px;
+    height: 46px;
+  }
+  .main-nav a {
+    padding: 18px 8px;
+    font-size: 10px;
+    word-wrap: inherit;
+  }
+  .promo {
+    margin-top: 120px;
+    font-size: 50px;
+    line-height: 50px;
+  }
+  .bottles {
+    width: 100%;
+    padding: 80px 30px 110px;
+  }
+  .bottles .new-items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .bottles .item-column {
+    margin-bottom: 20px;
+    padding-left: 15px;
+    padding-right: 0;
+    border: none;
+  }
+  .bottles .item-column:first-child {
+    padding-bottom: 35px;
+    border-bottom: 1px solid #e5e5e5;
+  }
+  .item-buttons {
+    line-height: 12px;
+  }
+  .advantage {
+    padding: 40px 0;
+  }
+  .advantage .advantage-items {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .advantage .advantage-column {
+    padding: 120px 0 40px;
+    border: none;
+  }
+  .advantage .advantage-column:last-child {
+    border: none;
+  }
+  .advantage .advantage-matreshka {
+    border-top: 1px solid #e5b66c;
+    border-bottom: 1px solid #e5b66c;
+  }
+  .advantage-brew,
+  .advantage-matreshka,
+  .advantage-thumbsup {
+    background-position: top 38px center;
+  }
+  .kvast-reference {
+    width: 100%;
+    padding: 80px 30px;
+  }
+  .kvast-reference .theory-container {
+    flex-direction: column;
+  }
+  .kvast-reference .column-2 {
+    margin-top: 21px;
+    margin-left: 0;
+  }
+  .reference-description {
+    width: 100%;
+  }
+  .reference-source {
+    margin-bottom: 15px;
+  }
+  .press-review {
+    width: 100%;
+    padding: 80px 30px 90px;
+  }
+  .press-review p {
+    width: 100%;
+  }
+  .press-review .btn-cite {
+    justify-content: space-between;
+  }
+  .btn.read-more {
+    padding: 11px 18px 12px;
+  }
+  .press-review cite {
+    margin-left: 0;
+    text-align: right;
+    font-size: 16px;
+  }
+  .range-table {
+    width: 100%;
+    padding: 90px 30px;
+  }
+  .to-order {
+    width: 100%;
+    padding: 80px 30px 108px;
+  }
+  .to-order .order-tip,
+  .to-order .order-form {
+    width: 100%;
+  }
+  .to-order .row input[type="text"] {
+    width: 100%;
+    flex: 1;
+  }
+  .to-order .phone-row {
+    margin-right: 20px;
+  }
+  .order-form input[type="text"],
+  .order-form textarea {
+    height: 45px;
+    font-size: 14px;
+  }
+  .to-order .checkbox-area input ~ .check-icon {
+    width: 33px;
+    height: 33px;
+  }
+  .btn.submit {
+    cursor: pointer;
+    padding: 14px 19px;
+    color: white;
+    font-size: 14px;
+    outline: none;
+    background-color: #834700;
+    border: none;
+  }
+  .footer {
+    width: 100%;
+    justify-content: flex-start;
+    padding: 60px 30px;
+  }
+  .footer .big-container {
+    width: 100%;
+  }
+  .footer .logo-and-nav img {
+    margin-left: 0;
+  }
+  .footer .main-nav {
+    margin-right: 0;
+  }
+  .footer-bottom {
+    margin-top: 30px;
+    flex-direction: column;
+  }
+  .footer-bottom,
+  .footer-bottom a {
+    font-size: 11px;
+  }
+  .footer-bottom .social-btn {
+    width: 45px;
+    height: 41px;
+  }
+  .footer-copyright {
+    margin: 11px 0 20px;
+    flex: none;
+  }
+  .footer-copyright p {
+    margin-left: 0;
+  }
 }
