--- a/adaptation.css
+++ b/adaptation.css
@@ -24,10 +24,8 @@
     width: 80px;
     height: 46px;
   }
-  .main-nav a {
-    padding: 18px 8px;
-    font-size: 10px;
-    word-wrap: inherit;
+  .main-nav {
+    display: none;
   }
   .promo {
     margin-top: 120px;
